[package]
name = "webcentral"
version = "2.1.2"
edition = "2021"
authors = ["Frank van Viegen <oss@vanviegen.net>"]
description = "A reverse proxy that runs multiple web applications on a single server with on-demand startup, sandboxing, auto-reload, and Let's Encrypt certificates"
license = "ISC"
repository = "https://github.com/vanviegen/webcentral"
homepage = "https://github.com/vanviegen/webcentral"
readme = "README.md"
keywords = ["reverse-proxy", "web-server", "https", "lets-encrypt", "docker", "firejail", "auto-reload", "sandboxing"]
categories = ["web-programming::http-server", "network-programming"]
rust-version = "1.75"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
http-body-util = "0.1"
http = "1.1"
dashmap = "6.1"

instant-acme = "0.8"
rcgen = "0.14"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
chrono = "0.4"
anyhow = "1.0"
bytes = "1.11"
libc = "0.2"
nix = { version = "0.30", features = ["user", "process", "signal"] }
glob = "0.3"
lazy_static = "1.5"
x509-parser = "0.18.0"
rand = "0.9.2"
include-exclude-watcher = "0.1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
